Expressions: Separate description from behavior using Evaluatable.